zsh install arch

--- a/arch/Dockerfile
+++ b/arch/Dockerfile
@@ -1,11 +1,14 @@
 # Use the latest Arch Linux base image
 FROM menci/archlinuxarm:latest
 
-# Update the system
-RUN pacman -Syu --noconfirm
+# Update the system and install necessary packages
+RUN pacman -Syu --noconfirm && \
+    pacman -S nano ansible sudo git which --noconfirm  # Added sudo here
 
-# Install a basic text editor and any other packages you need
-RUN pacman -S nano --noconfirm
+# Create a new user 'passoca' with home directory and no login shell
+# Replace 'passoca' with your preferred username if necessary
+RUN useradd -m -d /home/passoca -s /bin/bash passoca && \
+    echo "passoca ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/passoca  # Allow 'passoca' to use sudo without a password
 
 # Set the working directory to /app
 WORKDIR /app
@@ -13,5 +16,15 @@ WORKDIR /app
 # Copy local files into the container
 COPY . .
 
+# Change ownership of the /app directory to 'passoca'
+RUN chown -R passoca:passoca /app
+
+# Switch to the new user 'passoca'
+USER passoca
+
+# Install the required Ansible collection for community general modules
+RUN ansible-galaxy collection install community.general
+
 # Set the default command to run when starting the container
 CMD ["bash"]
+
