--- a/arch/main.playbook.yaml
+++ b/arch/main.playbook.yaml
@@ -9,10 +9,10 @@
       upgrade: true
     tags:
       - core
-  tasks:
-  - name: Include task list shell in play
-    include_tasks: tasks/shell.playbook.yaml
-  - name: Include task list cool in play
-    include_tasks: tasks/cool.playbook.yaml
-  - name: Include task list editor in play
-    include_tasks: tasks/editor.playbook.yaml
+  - name: Play needed tasks in order
+    include_tasks: "{{ item }}"
+    loop:
+      - tasks/git.playbook.yaml
+      - tasks/shell.playbook.yaml
+      - tasks/cool.playbook.yaml
+      - tasks/editor.playbook.yaml
