feat: add brave and vs code

--- a/arch/main.playbook.yaml
+++ b/arch/main.playbook.yaml
@@ -16,3 +16,5 @@
       - tasks/shell.playbook.yaml
       - tasks/cool.playbook.yaml
       - tasks/editor.playbook.yaml
+      - tasks/code.playbook.yaml
+      - tasks/brave.playbook.yaml
